service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tucityfeservice
spec:
  type: LoadBalancer
  selector:
    app: tucityfe
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
