ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tucity-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - lucvdacker.tucity.com
  rules:
    - host: lucvdacker.tucity.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tucityfeservice
                port:
                  number: 4200
